--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-coming-soon": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-scripts": "3.4.1",
